# RoverGUI

./: README.md  api.py  camera_manager.py  package-lock.json  requirements.txt
backend/: pyproject.toml
backend-rs/: Cargo.toml
backend-rs/src/: main.rs  utils.rs
backend/src/: main.rs  utils.rs
backend/src/backend/: __init__.py  api.py
backend/src/backend/managers/: camera_manager.py
react-app/: README.md  package-lock.json  package.json
react-app/src/: App.css  App.js  index.js
react-server/: index.py
rover-gui/: package-lock.json  package.json
rover-gui/src/app/: page.js
rover-gui/src/app/api/: route.js
