[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Average Rust broken library. So using fix from https://github.com/l1npengtul/nokhwa/issues/177.
nokhwa = { version = "0.10.4", features = ["input-native", "output-threaded", "serialize"], git = "https://github.com/kendfrey/nokhwa.git", branch = "0.10" }
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
