[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
# Average Rust broken library. So using fix from https://github.com/l1npengtul/nokhwa/issues/177.
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio-util = { version = "0.7.12", features = ["io"] }
h264_webcam_stream = { git = "https://github.com/megustaloscheetos/h264_webcam_stream" }
webrtc = "0.11.0"
v4l = "0.14.0"
